Initial Zara AI-generated app: This is a specification for building: the applicat...

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shmoo Clicker - Click your way to verifiable digital points</title>
-    <meta name="description" content="A Baseminiapp for Ethereum that allows users to generate non-transferrable Shmoo points by clicking." />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
